src/tests/update/snapshots/ciboulette2postgres__tests__update__query_params__include_multiple_resources.snap
---
source: src/tests/update/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "body": "Yes",
      "title": "How to dead"
    },
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "body": "Yeah I know ! Right ?!",
      "title": "Oh my g**"
    },
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "peoples",
    "data": {
      "age": 22,
      "first-name": "Sicnarf",
      "gender": "M",
      "last-name": "Yor el",
      "twitter": null
    }
  }
]
