src/tests/update/snapshots/ciboulette2postgres__tests__update__query_params__include_nested.snap
---
source: src/tests/update/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "peoples",
    "data": {
      "age": 22,
      "first-name": "Sicnarf",
      "gender": "M",
      "last-name": "Yor el",
      "twitter": null
    }
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "body": "Yes",
      "title": "How to dead"
    },
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "body": "Yeah I know ! Right ?!",
      "title": "Oh my g**"
    },
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "articles.comments",
    "data": {
      "body": "Wasnt convinced..."
    },
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "articles.comments",
    "data": {
      "body": "Vous savez, moi je ne crois pas qu\"il y ait de bonne ou de mauvaise situation. Moi, si je devais résumer ma vie aujourd\"hui avec vous, je dirais que c\"est d\"abord des rencontres. Des gens qui m\"ont tendu la main, peut-être à un moment où je ne pouvais pas, où j\"étais seul chez moi."
    },
    "related_type": "peoples",
    "related_id": "[uuid]"
  }
]
