src/tests/update/snapshots/ciboulette2postgres__tests__update__query_params__relationships_many_to_one_include_root.snap
---
source: src/tests/update/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "comments",
    "data": {
      "body": "Wasnt convinced..."
    }
  },
  {
    "id": "[uuid]",
    "type": "peoples",
    "related_type": "comments",
    "related_id": "[uuid]"
  }
]
