src/tests/update/snapshots/ciboulette2postgres__tests__update__query_params__relationships_many_to_one_sort_and_sparse.snap
---
source: src/tests/update/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "comments",
    "data": {
      "body": "Wasnt convinced..."
    }
  },
  {
    "id": "[uuid]",
    "type": "author",
    "related_type": "comments",
    "related_id": "[uuid]"
  }
]
