src/tests/update/snapshots/ciboulette2postgres__tests__update__query_params__relationships_many_to_one_sorting_by_child_full_path.snap
---
source: src/tests/update/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "comments",
    "data": {
      "body": "Wasnt convinced..."
    },
    "related": null
  },
  {
    "id": "[uuid]",
    "type": "peoples",
    "data": null,
    "related": {
      "type": "comments",
      "id": "[uuid]",
      "meta": null
    }
  }
]
