src/tests/update/snapshots/ciboulette2postgres__tests__update__query_params__sparse.snap
---
source: src/tests/update/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "peoples",
    "data": {
      "first-name": "Sicnarf"
    },
    "related": null
  }
]
