src/tests/update/snapshots/ciboulette2postgres__tests__update__query_params__sparse_others.snap
---
source: src/tests/update/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "title": "How to dead"
    }
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "title": "Oh my g**"
    }
  },
  {
    "id": "[uuid]",
    "type": "peoples",
    "data": {
      "age": 22,
      "first-name": "Sicnarf",
      "gender": "M",
      "last-name": "Yor el",
      "twitter": null
    }
  }
]
